# business_management_programming

./: 109年台北市出生人數.csv  109年台北市各行政區出生總人數.csv  109年台北市各行政區出生總人數前5名.csv  aqx_p_02.csv  ex1-1_U11151013.py  ex1-2_U11151013.py  ex10_U11151013.py  ex11_U11151013.py  ex12_U11151013.py  ex2_U11151013.py  ex3_U11151013.py  ex4_U11151013.py  ex5_U11151013.py  ex6_U11151013.py  ex7_U11151013.py  ex8_U11151013.py  ex9_U11151013.py  pyproject.toml
final/: final.py  pyproject.toml  臺北市中等學校畢業生出路(103學年度以後).csv  臺北市中等學校畢業生出路(57學年度至102學年度)時間數列統計資料.csv  臺北市勞動力及就業按半年別時間數列統計資料.csv  臺北市所得收入者每人所得－行業別按年別.csv
